Fixed misalignment on passphrase icon in firefox

--- a/playbook/app/pb_kits/playbook/pb_passphrase/_passphrase.scss
+++ b/playbook/app/pb_kits/playbook/pb_passphrase/_passphrase.scss
@@ -70,7 +70,6 @@
   @-moz-document url-prefix() {
     .passphrase-popover {
       position: relative;
-      top: $space_sm;
       left: -($space_xs * 1.5);
     }
   }
